--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,15 @@
 {
-  parser: "babel-eslint",
+  "parser": "babel-eslint",
   "plugins": [
       "react"
   ],
   "extends": "airbnb",
   "rules": {
       "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+      "indent": ["error", 4]
   },
   "env": {
-      "browser": true
+      "browser": true,
+      "jest": true
   }
 }
