--- a/package.json
+++ b/package.json
@@ -2,25 +2,28 @@
   "name": "react_webpack_boilerplate",
   "version": "1.0.0",
   "description": "starter kit for react + webpack development",
-  "main": "root.js",
+  "main": "app.js",
   "scripts": {
     "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --inline",
-    "build": "webpack -p"
+    "build": "webpack -p",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.6.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.1",
     "babel-core": "^6.21.0",
     "babel-eslint": "^7.1.1",
+    "babel-jest": "^20.0.3",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "css-loader": "^0.28.4",
+    "enzyme": "^2.9.1",
     "eslint": "^3.14.1",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-loader": "^1.7.1",
@@ -29,12 +32,23 @@
     "eslint-plugin-react": "^6.9.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.25.0",
+    "jest": "^20.0.4",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.5",
     "precss": "^1.4.0",
+    "react-test-renderer": "^15.6.1",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.16.1",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.3.0"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    },
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|scss|less)$": "<rootDir>/__mocks__/styleMock.js"
+    }
   }
 }
