--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,11 @@
   "extends": "airbnb",
   "rules": {
       "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-      "indent": ["error", 4]
+      "indent": ["error", 4],
+      "react/require-default-props": 0,
+      "react/forbid-prop-types": 0,
+      "jsx-a11y/no-static-element-interactions": 0,
+      "jsx-a11y/anchor-has-content": 0
   },
   "env": {
       "browser": true,
