--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "history": "^4.6.3",
+    "prop-types": "^15.5.10",
     "react": "^15.4.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
+    "react-router": "^4.1.1",
+    "react-router-redux": "^5.0.0-alpha.6",
+    "redux": "^3.7.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.1",
