--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap-sass": "^3.3.7",
     "history": "^4.6.3",
     "prop-types": "^15.5.10",
     "react": "^15.4.1",
@@ -38,6 +39,7 @@
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.9.0",
     "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.25.0",
     "jest": "^20.0.4",
     "node-sass": "^4.5.3",
