--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap-sass": "^3.3.7",
+    "bootstrap": "^4.0.0-alpha.6",
     "history": "^4.6.3",
     "prop-types": "^15.5.10",
     "react": "^15.4.1",
