--- a/.eslintrc
+++ b/.eslintrc
@@ -15,5 +15,12 @@
   "env": {
       "browser": true,
       "jest": true
+  },
+  "settings": {
+    "import/resolver": {
+      "webpack": {
+        "config": "webpack.config.js"
+      }
+    }
   }
 }
