--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.6",
     "eslint-import-resolver-webpack": "^0.8.3",
+    "font-awesome": "^4.7.0",
     "history": "^4.6.3",
     "prop-types": "^15.5.10",
     "react": "^15.4.1",
