--- a/package.json
+++ b/package.json
@@ -11,19 +11,7 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "bootstrap": "^4.0.0-alpha.6",
-    "eslint-import-resolver-webpack": "^0.8.3",
-    "font-awesome": "^4.7.0",
-    "history": "^4.6.3",
-    "prop-types": "^15.5.10",
-    "react": "^15.4.1",
-    "react-dom": "^15.6.1",
-    "react-redux": "^5.0.5",
-    "react-router": "^4.1.2",
-    "react-router-redux": "^5.0.0-alpha.6",
-    "redux": "^3.7.2"
-  },
+  "dependencies": {},
   "devDependencies": {
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.21.0",
@@ -32,22 +20,31 @@
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "bootstrap": "^4.0.0-alpha.6",
     "css-loader": "^0.28.4",
     "enhanced-resolve": "^3.3.0",
     "enzyme": "^2.9.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.2",
+    "eslint-import-resolver-webpack": "^0.8.3",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.1.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
+    "font-awesome": "^4.7.0",
+    "history": "^4.6.3",
     "html-webpack-plugin": "^2.29.0",
     "jest": "^20.0.4",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.5",
     "precss": "^1.4.0",
+    "prop-types": "^15.5.10",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-router": "^4.1.2",
+    "react-router-dom": "^4.1.2",
     "react-test-renderer": "^15.6.1",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.16.1",
