--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,9 @@
   ],
   "extends": "airbnb",
   "rules": {
+      "import/no-extraneous-dependencies": 0,
+      "react/jsx-indent": ["error", 4],
+      "react/jsx-indent-props": ["error", 4],
       "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
       "indent": ["error", 4],
       "react/require-default-props": 0,
