fixed tests - added memoryrouter so that the links in navbar work, added src module to jest config in package.json to allow jest to understand the absolute Component and Container directories

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "webpack-dev-server": "^2.5.1"
   },
   "jest": {
+    "modulePaths": ["src"],
     "transform": {
       "^.+\\.js$": "babel-jest"
     },
