--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "jquery": "^3.2.1",
+    "popper.js": "^1.12.5",
     "react-redux": "^5.0.5"
   },
   "devDependencies": {
